# goldencheck

./: .clinerules  .coverage  .cursorrules  .gitignore  .windsurfrules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.mcp  LAUNCHGUIDE.md  LICENSE  README.md  SECURITY.md  llms.txt  package.json  pyproject.toml  server.json  smithery.yaml
.devcontainer/: devcontainer.json  post-create.sh
.firecrawl/: gx-stars.json  pandera-stars.json  search-backlinks.json  search-competitors.json  search-er-video.json  search-exact.json  search-goldenmatch-er.json  search-goldenmatch-youtube.json  search-recent.json  soda-stars.json  youtube-video.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: npm-publish.yml  pages.yml  test.yml  try-it.yml
.goldencheck/: history.jsonl
benchmarks/: detection_benchmark.py  generate_datasets.py  goldencheck_benchmark.py  goldencheck_benchmark_llm.py  run_suite.py  speed_benchmark.py
docs/: _config.yml  api-stability.md  architecture.md  auto-fix.md  baseline.md  benchmarks.md  cli.md  configuration.md  database-scanning.md  domain-packs.md  github-action.md  index.md  installation.md  interactive-tui.md  jupyter-and-colab.md  llm-boost.md  llms-full.txt  llms.txt  mcp-server.md  profilers.md  quick-start.md  rest-api.md  scheduled-runs.md  schema-diff.md  typescript.md  watch-mode.md
docs/wiki/: Architecture.md  Auto-Fix.md  Baseline.md  Benchmarks.md  CLI.md  Configuration.md  Database-Scanning.md  Domain-Packs.md  GitHub-Action.md  Home.md  Installation.md  Interactive-TUI.md  Jupyter-and-Colab.md  LLM-Boost.md  MCP-Server.md  Profilers.md  Quick-Start.md  REST-API.md  Scheduled-Runs.md  Schema-Diff.md  TypeScript.md  Watch-Mode.md
examples/: README.md  benchmark.py  domain_pack.py  domain_packs.py  scan_and_profile.py  scan_basic.py  validate_rules.py
goldencheck/: __init__.py  notebook.py  server.py
goldencheck/a2a/: __init__.py  server.py  skills.py
goldencheck/agent/: __init__.py  handoff.py  intelligence.py  review_queue.py
goldencheck/baseline/: __init__.py  constraints.py  correlation.py  models.py  patterns.py  priors.py  semantic.py  statistical.py
goldencheck/cli/: demo_data.py  init_wizard.py  main.py
goldencheck/config/: loader.py  schema.py  settings.py  writer.py
goldencheck/drift/: __init__.py  detector.py
goldencheck/engine/: CLAUDE.md  confidence.py  db_scanner.py  differ.py  evaluate.py  fixer.py  history.py  notifier.py  reader.py  sampler.py  scanner.py  scheduler.py  triage.py  validator.py  watcher.py
goldencheck/llm/: CLAUDE.md  budget.py  merger.py  parser.py  prompts.py  providers.py  rule_generator.py  sample_block.py
goldencheck/mcp/: CLAUDE.md  __init__.py  agent_tools.py  server.py
goldencheck/models/: finding.py  profile.py
goldencheck/profilers/: CLAUDE.md  base.py  cardinality.py  drift_detection.py  encoding_detection.py  format_detection.py  nullability.py  pattern_consistency.py  range_distribution.py  sequence_detection.py  type_inference.py  uniqueness.py
goldencheck/relations/: age_validation.py  null_correlation.py  numeric_cross.py  temporal.py
goldencheck/reporters/: ci_reporter.py  html_reporter.py  json_reporter.py  rich_console.py
goldencheck/semantic/: CLAUDE.md  types.yaml  (+2 more)
scripts/: gen_parity_goldens_js.py  goldencheck_demo.ipynb
tests/: test_a2a.py  test_a2a_skills.py  test_agent.py  test_handoff.py  test_integration.py  test_mcp_agent_tools.py  test_public_api.py  test_review_queue.py  test_standalone.py
(+83 files in other folders)
