[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goldencheck"
version = "0.1.0"
description = "Data validation that discovers rules from your data so you don't have to write them"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Ben Severn", email = "benzsevern@gmail.com" }]
keywords = ["data-validation", "data-quality", "profiling", "data-checks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "polars>=1.0",
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "openpyxl>=3.1",
    "textual>=1.0",
]

[project.urls]
Homepage = "https://github.com/benzsevern/goldencheck"
Repository = "https://github.com/benzsevern/goldencheck"
Issues = "https://github.com/benzsevern/goldencheck/issues"

[project.scripts]
goldencheck = "goldencheck.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
