[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "goldencheck"
version = "1.1.0"
description = "Data validation that discovers rules from your data so you don't have to write them"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Ben Severn", email = "benzsevern@gmail.com" }]
keywords = ["data-validation", "data-quality", "profiling", "data-checks", "data-profiling", "llm", "tui", "csv", "parquet", "baseline", "drift-detection", "statistical-profiling"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "polars>=1.0",
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "openpyxl>=3.1",
    "textual>=1.0",
]

[project.urls]
Homepage = "https://github.com/benzsevern/goldencheck"
Repository = "https://github.com/benzsevern/goldencheck"
Issues = "https://github.com/benzsevern/goldencheck/issues"
Documentation = "https://benzsevern.github.io/goldencheck/"
Changelog = "https://github.com/benzsevern/goldencheck/blob/main/CHANGELOG.md"

[project.scripts]
goldencheck = "goldencheck.cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
llm = [
    "anthropic>=0.30",
    "openai>=1.30",
]
db = [
    "connectorx>=0.3",
]
mcp = [
    "mcp>=1.0",
]
agent = [
    "aiohttp>=3.9",
]
baseline = [
    "scipy>=1.10",
    "numpy>=1.24",
]
semantic = [
    "sentence-transformers>=2.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
